Thu Mar 26 11:00:04 1998  Tom Tromey  <tromey@cygnus.com>

	* m4/exeext.m4: Correctly eliminate bad cases when computing
	am_cv_exeext.  Report from Markus F.X.J. Oberhumer.

Wed Mar 25 15:09:56 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_options): Support alpha version numbers.

	* lisp.am (install-@DIR@LISP): Allow .el files to appear in build
	directory.  From Gary V Vaughan.

Mon Mar 23 07:55:04 1998  Tom Tromey  <tromey@cygnus.com>

	* Released 1.2h.

	* header.am (install-@DIR@HEADERS): A header can appear in the
	build directory as well as the source directory.  From Gary V
	Vaughan.

	* automake.in (handle_yacc_lex_cxx): Push lib sources onto
	de_ansi_files before generating ._c dependencies.  Test
	libobj8.test.

	* m4/mktime.m4: New version from Jim Meyering.

	* aclocal.in (usage): Document --print-ac-dir.
	(parse_arguments): Added --print-ac-dir.

	* ansi2knr.c, ansi2knr.1: New versions from ghostscript.
	(main): Reapplied "-" change from Harlan Stenn.

Fri Mar 20 22:42:30 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Use &am_conf_line_error,
	not warn.  Check to make sure warnings happen only for
	configure.in, not for "not aclocal.m4".

Fri Mar 20 22:35:31 1998  Alexandre Oliva <oliva@dcc.unicamp.br>

	* automake.in: understand AM_PROG_LEX as a replacement for
	AC_PROG_LEX and AC_DECL_YYTEXT
	warn if the replaced macros are used.
	* m4/Makefile.am: add lex.m4
	* m4/lex.m4 (AM_PROG_LEX): new file and macro
	* missing: added lex/flex support
	instead of touching flex and bison output files, try to copy
	them from a filename based on the last given argument

Fri Mar 20 00:26:10 1998  Tom Tromey  <tromey@cygnus.com>

	* m4/protos.m4: Require AC_PROG_CPP.

	* aclocal.in (add_file): If &search fails, and macro matches AM_,
	then print error.  Test aclocalii.test.

	De-ansi-fication fixes from Harlan Stenn:
	* ansi2knr.c (main): Accept "-" argument to mean stdin.