@@ -40,6 +40,7 @@ Joshua Cowan		jcowan@jcowan.reslife.okstate.edu
 Juergen A. Erhard	jae@laden.ilk.de
 Karl Berry		kb@cs.umb.edu
 Kevin Dalley		kevin@aimnet.com
+L. Peter Deutsch	ghost@aladdin.com
 Maciej W. Rozycki	macro@ds2.pg.gda.pl
 Marius Vollmer		mvo@zagadka.ping.de
 Mark Eichin		eichin@cygnus.com
