@@ -1,3 +1,9 @@
+Tue Mar 31 21:07:42 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_yacc_lex_cxx): Changed to use new version of
+	ansi2knr.
+	* ansi2knr.c: New version from L. Peter Deutsch.
+
 Thu Mar 26 11:00:04 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* m4/exeext.m4: Correctly eliminate bad cases when computing
